[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Menu/Creadits.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/return.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Discord.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/Instagram_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/itchio.png" type="Texture" id=5]
[ext_resource path="res://Fonts/RussoOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Menu/42png.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[node name="Credits" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -101.0
margin_top = -68.0
margin_right = 1305.0
margin_bottom = 815.0
color = Color( 0.505882, 0.698039, 0.698039, 1 )

[node name="BackButton" type="TouchScreenButton" parent="."]
scale = Vector2( 4, 4 )
normal = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 234.0
margin_top = 170.0
margin_right = 926.0
margin_bottom = 379.0
custom_fonts/font = SubResource( 1 )
text = "Emircan Gezer    : Game Developer
Emre Dindar       : Game Developer
Alper Gezer        : Game Developer
TarÄ±k Dindar       : 2D Artist"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 87, 487 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 4 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 328, 490 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 5 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( 583, 491 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 3 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="."]
position = Vector2( 871, 524 )
scale = Vector2( 0.872881, 0.858824 )
normal = ExtResource( 7 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="pressed" from="TouchScreenButton3" to="." method="_on_TouchScreenButton3_pressed"]
[connection signal="pressed" from="TouchScreenButton4" to="." method="_on_TouchScreenButton4_pressed"]
